Added windows setup

--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "velociptor-question-generator",
+  "name": "raptor-q",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
